--- a/dependencies/android/src/main/AndroidManifest.xml
+++ b/dependencies/android/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="org.haxe.extension.anwebview" >
 	<uses-permission android:name="android.permission.INTERNET" />
+
+	<application>
+		<activity android:name="org.haxe.extension.AnWebViewActivity" />
+	</application>
 	
 	
 </manifest>
